
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date:
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/06/15 15:05:00 EDT
Tag: blume-20010615-moresparc
Description:

Here is a short late-hour update related to Sparc c-calls:

 -- made handling of double-word arguments a bit smarter

 -- instruction selection phase tries to collapse certain clumsily
    constructed ML-Trees; typical example:

        ADD(ty,ADD(_,e,LI d1),LI d2)  ->  ADD(ty,e,LI(d1+d2))

    This currently has no further impact on SML/NJ since mlriscGen does
    not seem to generate such patterns in the first place, and c-calls
    (which did generate them in the beginning) has meanwhile been fixed
    so as to avoid them as well.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/06/15 15:05:00 EDT
Tag: blume-20010615-sparc
Description:

The purpose of this update is to provide an implementation of NLFFI
on Sparc machines.

Here are the changes in detail:

   * src/MLRISC/sparc/c-calls/sparc-c-calls.sml is a new file containing
   the Sparc implementation of the c-calls API.
   * The Sparc backend of SML/NJ has been modified to uniformely use %fp
   for accessing the ML frame.  Thus, we have a real frame pointer and
   can freely modify %sp without need for an omit-frame-ptr phase.
   The vfp logic in src/compiler/CodeGen/* has been changed to accomodate
   this case.
   * ml-nlffigen has been taught to produce code for different architectures
   and calling conventions.
   * In a way similar to what was done in the x86 case, the Sparc
   backend uses its own specific extension to mltree.  (For example,